--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,20 +1,17 @@
 @import "../../css-config/mixins.scss";
 
-//why scss is better than normal css because of its nesting feautre
-// in rgba rgb is for color and for last one is opacity
-
-//nesting feature in scss
-.main-header{
+.main-header {
     width: 100%;
     padding: 0 20px;
+    z-index: 99;
     background-color: #212121;
     color: white;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    z-index: 99;
+    border-bottom: 1px solid;
+    border-color: rgba(0, 0, 0, 0.1);
     @include md {
         padding: 0 40px;
     }
-    .header-content{
+    .header-content {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -24,77 +21,81 @@
         @include md {
             height: 80px;
         }
-        .left{
-            list-style-type: none;
-            display: none;
-            gap: 25px;
-            @include md {
-                display: flex;
-            }
-            li {
-                font-size: 14px;
-                font-weight:600 ;
-                text-transform: uppercase;
-                cursor: pointer;
-
+    }
+    .left {
+        list-style-type: none;
+        display: none;
+        gap: 25px;
+        @include md {
+            display: flex;
+        }
+        li {
+            font-size: 14px;
+            font-weight: 600;
+            text-transform: uppercase;
+            cursor: pointer;
+            &:hover {
+                opacity: 0.6;
             }
         }
-        .center{
-            font-size: 22px;
-            font-weight: 700;
+    }
+    .center {
+        font-size: 22px;
+        font-weight: 700;
+        cursor: pointer;
+        @include md {
+            font-size: 34px;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+    .right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        @include md {
+            gap: 25px;
+        }
+        svg {
+            font-size: 20px;
             cursor: pointer;
             @include md {
-                font-size: 34px;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
+                font-size: 24px;
             }
-
+            &:hover {
+                opacity: 0.6;
+            }
         }
-        .right{
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            @include md {
-                gap: 25px;
-            }
-            svg {
-                font-size: 20px;
-                cursor: pointer;
-                @include md {
-                    font-size: 25px;
-                }
-            }
-            .cart-icon{
-                position: relative;
-                span {
-                    min-width: 20px;
-                    text-align: center;
-                    background-color: #8e2de2;
-                    position: absolute;
-                    top: -5px;
-                    font-size: 12px;
-                    line-height: 1;
-                    border-radius: 10px;
-                    left: 14px;
-                }
+        .cart-icon {
+            position: relative;
+            span {
+                min-width: 20px;
+                text-align: center;
+                background: #8e2de2;
+                padding: 2.5px;
+                position: absolute;
+                top: -5px;
+                right: -12px;
+                font-size: 12px;
+                line-height: 1;
+                border-radius: 10px;
             }
         }
     }
-
     &.sticky-header {
+        background-color: #212121;
+        color: white;
         position: sticky;
         top: 0;
-        transform: translateY(-80px);
-        animation: stickyHeader 0.5s ease forwards;
+        transform: translateY(-60px);
+        animation: StickyHeader 0.3s ease forwards;
     }
-
 }
 
-
-@keyframes stickyHeader{
+@keyframes StickyHeader {
     0% {
-        transform: translateY(-80px);
+        transform: translateY(-60px);
     }
     100% {
         transform: translateY(0);
