--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -33,11 +33,7 @@
             @include xxl {
                 width: 600px;
                 margin-right: 0;
-                margin-top: 80px;
-                
-                
-                
-
+                margin-top: 0;
             }
         }
         .text-content {
