--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -33,7 +33,8 @@
             @include xxl {
                 width: 600px;
                 margin-right: 0;
-                margin-top: 0;
+                margin-top: 45px;
+                height: 710px;
             }
         }
         .text-content {
